force-app/main/default/objects/CB_Quote__c/CB_Quote__c.object-meta.xml
<CustomObject>
    <label>CB Quote</label>
    <nameField>
        <label>CB Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>