force-app/main/default/objects/CB_Quote__c/fields/CB_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Quote_Id__c</fullName>
    <label>CB Quote Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>