force-app/main/default/objects/CB_Quote__c/fields/CB_Subscription__c.field-meta.xml
<CustomField>
    <fullName>CB_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB Subscription</label>
    <referenceTo>CB_Subscription__c</referenceTo>
    <relationshipLabel>CB Quotes</relationshipLabel>
    <relationshipName>CB_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>