force-app/main/default/objects/CB_Quote__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Quotes</relationshipLabel>
    <relationshipName>CB_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>