force-app/main/default/objects/CB_Quote__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CB Quotes</relationshipLabel>
    <relationshipName>CB_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>