force-app/main/default/objects/CB_Quote__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE_SUBSCRIPTION_FOR_CUSTOMER</fullName>
            </value>
            <value>
                <fullName>CHANGE_SUBSCRIPTION</fullName>
            </value>
            <value>
                <fullName>ONETIME_INVOICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>