force-app/main/default/objects/CB_Quote__c/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>