force-app/main/default/objects/CB_Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
            <value>
                <fullName>DECLINED</fullName>
            </value>
            <value>
                <fullName>INVOICED</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>