force-app/main/default/objects/CB_Quote__c/fields/ValidTill__c.field-meta.xml
<CustomField>
    <fullName>ValidTill__c</fullName>
    <label>Valid Till</label>
    <type>DateTime</type>
</CustomField>