force-app/main/default/objects/CB_Quote__c/fields/VATNumber__c.field-meta.xml
<CustomField>
    <fullName>VATNumber__c</fullName>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>